deps/CppInterOpExtra/include/clang-c/CXCppInterOp.h

LLVM_CLANG_C_EXTERN_C_BEGIN

typedef void *CXCppInterpreter;
typedef void *CXCppScope;
typedef void *CXCppType;
typedef void *CXCppFunction;
typedef void *CXCppConstFunction;
typedef void *CXCppFuncAddr;
typedef void *CXCppObject;
typedef void *CXCppJitCall;
CXString clang_CppInterOp_GetVersion(void);
void clang_CppInterOp_EnableDebugOutput(bool value);
bool clang_CppInterOp_IsDebugOutputEnabled(void);
bool clang_CppInterOp_IsAggregate(CXCppScope scope);
bool clang_CppInterOp_IsNamespace(CXCppScope scope);
bool clang_CppInterOp_IsClass(CXCppScope scope);
bool clang_CppInterOp_IsComplete(CXCppScope scope);
size_t clang_CppInterOp_SizeOf(CXCppScope scope);
bool clang_CppInterOp_IsBuiltin(CXCppType type);
bool clang_CppInterOp_IsTemplate(CXCppScope scope);
bool clang_CppInterOp_IsTemplateSpecialization(CXCppScope scope);
bool clang_CppInterOp_IsTypedefed(CXCppScope scope);
bool clang_CppInterOp_IsAbstract(CXCppType type);
bool clang_CppInterOp_IsEnumScope(CXCppScope scope);
bool clang_CppInterOp_IsEnumConstant(CXCppScope scope);
bool clang_CppInterOp_IsEnumType(CXCppType type);
CXStringSet *clang_CppInterOp_GetEnums(CXCppScope scope);
bool clang_CppInterOp_IsSmartPtrType(CXCppType type);
CXCppType clang_CppInterOp_GetIntegerTypeFromEnumScope(CXCppScope scope);
CXCppType clang_CppInterOp_GetIntegerTypeFromEnumType(CXCppType type);
typedef struct {
  CXCppScope *Scopes;
  size_t Count;
} CXCppScopeSet;
void clang_CppInterOp_CXCppScopeSet_dispose(CXCppScopeSet scopes);
CXCppScopeSet clang_CppInterOp_GetEnumConstants(CXCppScope scope);
CXCppType clang_CppInterOp_GetEnumConstantType(CXCppScope scope);
size_t clang_CppInterOp_GetEnumConstantValue(CXCppScope scope);
size_t clang_CppInterOp_GetSizeOfType(CXCppType type);
bool clang_CppInterOp_IsVariable(CXCppScope scope);
CXString clang_CppInterOp_GetName(CXCppScope klass);
CXString clang_CppInterOp_GetCompleteName(CXCppType klass);
CXString clang_CppInterOp_GetQualifiedName(CXCppType klass);
CXString clang_CppInterOp_GetQualifiedCompleteName(CXCppType klass);
CXCppScopeSet clang_CppInterOp_GetUsingNamespaces(CXCppScope scope);
CXCppScope clang_CppInterOp_GetGlobalScope(void);
CXCppScope clang_CppInterOp_GetUnderlyingScope(CXCppScope scope);
CXCppScope clang_CppInterOp_GetScope(const char *name, CXCppScope parent);
CXCppScope clang_CppInterOp_GetScopeFromCompleteName(const char *name);
CXCppScope clang_CppInterOp_GetNamed(const char *name, CXCppScope parent);
CXCppScope clang_CppInterOp_GetParentScope(CXCppScope scope);
CXCppScope clang_CppInterOp_GetScopeFromType(CXCppType type);
size_t clang_CppInterOp_GetNumBases(CXCppType type);
CXCppScope clang_CppInterOp_GetBaseClass(CXCppType type, size_t ibase);
bool clang_CppInterOp_IsSubclass(CXCppScope derived, CXCppScope base);
int64_t clang_CppInterOp_GetBaseClassOffset(CXCppScope derived, CXCppScope base);
typedef struct {
  CXCppFunction *Funcs;
  size_t Count;
} CXCppFunctionSet;
void clang_CppInterOp_CXCppFunctionSet_dispose(CXCppFunctionSet funcs);
CXCppFunctionSet clang_CppInterOp_GetClassMethods(CXCppScope klass);
bool clang_CppInterOp_HasDefaultConstructor(CXCppScope scope);
CXCppFunction clang_CppInterOp_GetDefaultConstructor(CXCppScope scope);
CXCppFunction clang_CppInterOp_GetDestructor(CXCppScope scope);
CXCppFunctionSet clang_CppInterOp_GetFunctionsUsingName(CXCppScope scope, const char *name);
CXCppType clang_CppInterOp_GetFunctionReturnType(CXCppFunction func);
size_t clang_CppInterOp_GetFunctionNumArgs(CXCppFunction func);
size_t clang_CppInterOp_GetFunctionRequiredArgs(CXCppConstFunction func);
CXCppType clang_CppInterOp_GetFunctionArgType(CXCppFunction func, size_t iarg);
CXString clang_CppInterOp_GetFunctionSignature(CXCppFunction func);
bool clang_CppInterOp_IsFunctionDeleted(CXCppConstFunction function);
bool clang_CppInterOp_IsTemplatedFunction(CXCppFunction func);
bool clang_CppInterOp_ExistsFunctionTemplate(const char *name, CXCppScope parent);
bool clang_CppInterOp_IsMethod(CXCppConstFunction method);
bool clang_CppInterOp_IsPublicMethod(CXCppFunction method);
bool clang_CppInterOp_IsProtectedMethod(CXCppFunction method);
bool clang_CppInterOp_IsPrivateMethod(CXCppFunction method);
bool clang_CppInterOp_IsConstructor(CXCppConstFunction method);
bool clang_CppInterOp_IsDestructor(CXCppConstFunction method);
bool clang_CppInterOp_IsStaticMethod(CXCppConstFunction method);
CXCppFuncAddr clang_CppInterOp_GetFunctionAddressFromMangledName(const char *mangled_name);
CXCppFuncAddr clang_CppInterOp_GetFunctionAddressFromMethod(CXCppFunction method);
bool clang_CppInterOp_IsVirtualMethod(CXCppFunction method);
CXCppScopeSet clang_CppInterOp_GetDatamembers(CXCppScope scope);
CXCppScope clang_CppInterOp_LookupDatamember(const char *name, CXCppScope parent);
CXCppType clang_CppInterOp_GetVariableType(CXCppScope var);
intptr_t clang_CppInterOp_GetVariableOffset(CXCppScope var);
bool clang_CppInterOp_IsPublicVariable(CXCppScope var);
bool clang_CppInterOp_IsProtectedVariable(CXCppScope var);
bool clang_CppInterOp_IsPrivateVariable(CXCppScope var);
bool clang_CppInterOp_IsStaticVariable(CXCppScope var);
bool clang_CppInterOp_IsConstVariable(CXCppScope var);
bool clang_CppInterOp_IsRecordType(CXCppType type);